<resources>
    <string name="app_name">Online Shop</string>
    <string name="shop">Shop</string>
    <string name="like">Favorite</string>
    <string name="catalog">Catalog</string>
    <string name="basket">Cart</string>
    <string name="orders">Personal Area</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="product_price">Price: $%d</string>
    <string name="product_category">Category: %s</string>
    <string name="product_discount">Discount: %.2f%%</string>
    <string name="product_rating">Rating: %.2f</string>
    <string name="product_stock">Stock: %d</string>
    <string name="product_brand">Brand: %s</string>

    <string name="logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="here_s_your_first_step_with_us">Here\'s Your first step with us!</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="already_have_an_acount">Already have an acount</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login">LOGIN</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="home">Home</string>
    <string name="account_information">Account Information</string>
    <string name="cart">Cart</string>
    <string name="sign_out">Sign Out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="experience_the_iphone_15">Experience the iPhone 15</string>
    <string name="iphone_15">iphone 15</string>
    <string name="please_order">PLEASE ORDER</string>
    <string name="save">SAVE</string>
</resources>