<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/shop"
        android:icon="@drawable/shop"
        android:title="@string/shop"
        android:orderInCategory="1"

        />

    <item
        android:id="@+id/catalog"
        android:icon="@drawable/shop"
        android:title="@string/catalog"
        android:orderInCategory="2"

        />

    <item
        android:id="@+id/like"
        android:icon="@drawable/shop"
        android:title="@string/like"
        android:orderInCategory="3"

        />

    <item
        android:id="@+id/basket"
        android:icon="@drawable/shop"
        android:title="@string/basket"
        android:orderInCategory="4"

        />

    <item
        android:id="@+id/orders"
        android:icon="@drawable/shop"
        android:title="@string/orders"
        android:orderInCategory="5"

        />

</menu>